Fixed hover effect on mobile.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   --watch: #aeaeaf;
   --details: #292536;
   --noscript: #c41616;
-  color: #103c64;
 }
 
 * {
@@ -18,6 +17,7 @@
 
 body {
   background-color: var(--background);
+  overflow-y: hidden;
 }
 
 #watch-container {
@@ -49,7 +49,7 @@ body {
 }
 
 button {
-  min-width: 120px;
+  width: 120px;
   height: 40px;
   padding: 10px 20px;
   background-color: var(--watch);
@@ -62,6 +62,10 @@ button {
   border: none;
   border-radius: 10px;
   cursor: pointer;
+}
+
+button:hover {
+  filter: none;
 }
 
 button:active {
